Mut4All/bug-labels/rust/A-diagnostics/100224.txt
Issue Title:
ICE: due to certain invalid function definitions (nightly) · Issue #100224 · rust-lang/rust · GitHub

Rust Code:
fn f(_: &＆()) -> &() { todo!() }

Bug Trace:
error: unknown start of token: \u{ff06}
 --> ./ice.rs:1:10
  |
1 | fn f(_: &＆()) -> &() { todo!() }
  |          ^^
  |
help: Unicode character '＆' (Fullwidth Ampersand) looks like '&' (Ampersand), but it is not
  |
1 | fn f(_: &&()) -> &() { todo!() }
  |          ~

error[E0106]: missing lifetime specifier
 --> ./ice.rs:1:18
  |
1 | fn f(_: &＆()) -> &() { todo!() }
  |         -----     ^ expected named lifetime parameter
  |
  = help: this function's return type contains a borrowed value, but the signature does not say which one of argument 1's 2 lifetimes it is borrowed from
thread 'rustc' panicked at 'assertion failed: bpos.to_u32() >= mbc.pos.to_u32() + mbc.bytes as u32', compiler/rustc_span/src/lib.rs:1683:17
stack backtrace:
   0: rust_begin_unwind
             at /rustc/2befdefdda0f2bc5ff93f7f95633c98841409098/library/std/src/panicking.rs:584:5
   1: core::panicking::panic_fmt
             at /rustc/2befdefdda0f2bc5ff93f7f95633c98841409098/library/core/src/panicking.rs:142:14
   2: core::panicking::panic
             at /rustc/2befdefdda0f2bc5ff93f7f95633c98841409098/library/core/src/panicking.rs:48:5
   3: <rustc_span::source_map::SourceMap>::lookup_char_pos
   4: <rustc_span::source_map::SourceMap>::is_valid_span
   5: <core::iter::adapters::cloned::Cloned<core::iter::adapters::filter::Filter<core::slice::iter::Iter<rustc_errors::Substitution>, <rustc_errors::CodeSuggestion>::splice_lines::{closure#0}>> as core::iter::traits::iterator::Iterator>::try_fold::<(), core::iter::traits::iterator::Iterator::find_map::check<rustc_errors::Substitution, (alloc::string::String, alloc::vec::Vec<rustc_errors::SubstitutionPart>, alloc::vec::Vec<alloc::vec::Vec<rustc_errors::SubstitutionHighlight>>, bool), &mut <rustc_errors::CodeSuggestion>::splice_lines::{closure#1}>::{closure#0}, core::ops::control_flow::ControlFlow<(alloc::string::String, alloc::vec::Vec<rustc_errors::SubstitutionPart>, alloc::vec::Vec<alloc::vec::Vec<rustc_errors::SubstitutionHighlight>>, bool)>>
   6: <alloc::vec::Vec<(alloc::string::String, alloc::vec::Vec<rustc_errors::SubstitutionPart>, alloc::vec::Vec<alloc::vec::Vec<rustc_errors::SubstitutionHighlight>>, bool)> as alloc::vec::spec_from_iter::SpecFromIter<(alloc::string::String, alloc::vec::Vec<rustc_errors::SubstitutionPart>, alloc::vec::Vec<alloc::vec::Vec<rustc_errors::SubstitutionHighlight>>, bool), core::iter::adapters::filter_map::FilterMap<core::iter::adapters::cloned::Cloned<core::iter::adapters::filter::Filter<core::slice::iter::Iter<rustc_errors::Substitution>, <rustc_errors::CodeSuggestion>::splice_lines::{closure#0}>>, <rustc_errors::CodeSuggestion>::splice_lines::{closure#1}>>>::from_iter
   7: <rustc_errors::emitter::EmitterWriter as rustc_errors::emitter::Emitter>::emit_diagnostic
   8: <rustc_errors::HandlerInner>::emit_diagnostic
   9: <rustc_errors::Handler>::emit_diagnostic
  10: <rustc_errors::ErrorGuaranteed as rustc_errors::diagnostic_builder::EmissionGuarantee>::diagnostic_builder_emit_producing_guarantee
  11: <rustc_resolve::late::LateResolutionVisitor>::report_missing_lifetime_specifiers
  12: <rustc_resolve::late::LateResolutionVisitor as rustc_ast::visit::Visitor>::visit_fn
  13: rustc_ast::visit::walk_item::<rustc_resolve::late::LateResolutionVisitor>
  14: <rustc_resolve::late::LateResolutionVisitor>::resolve_item
  15: <rustc_resolve::late::LateResolutionVisitor as rustc_ast::visit::Visitor>::visit_item
  16: <rustc_resolve::Resolver>::late_resolve_crate
  17: <rustc_session::session::Session>::time::<(), <rustc_resolve::Resolver>::resolve_crate::{closure#0}>
  18: <rustc_interface::passes::boxed_resolver::BoxedResolver>::access::<<rustc_interface::queries::Queries>::expansion::{closure#0}::{closure#0}, core::result::Result<rustc_ast::ast::Crate, rustc_errors::ErrorGuaranteed>>
  19: <rustc_interface::queries::Queries>::expansion
  20: <rustc_interface::interface::Compiler>::enter::<rustc_driver::run_compiler::{closure#1}::{closure#2}, core::result::Result<core::option::Option<rustc_interface::queries::Linker>, rustc_errors::ErrorGuaranteed>>
  21: rustc_span::with_source_map::<core::result::Result<(), rustc_errors::ErrorGuaranteed>, rustc_interface::interface::create_compiler_and_run<core::result::Result<(), rustc_errors::ErrorGuaranteed>, rustc_driver::run_compiler::{closure#1}>::{closure#1}>
  22: rustc_interface::interface::create_compiler_and_run::<core::result::Result<(), rustc_errors::ErrorGuaranteed>, rustc_driver::run_compiler::{closure#1}>
  23: <scoped_tls::ScopedKey<rustc_span::SessionGlobals>>::set::<rustc_interface::interface::run_compiler<core::result::Result<(), rustc_errors::ErrorGuaranteed>, rustc_driver::run_compiler::{closure#1}>::{closure#0}, core::result::Result<(), rustc_errors::ErrorGuaranteed>>
note: Some details are omitted, run with `RUST_BACKTRACE=full` for a verbose backtrace.

error: internal compiler error: unexpected panic

note: the compiler unexpectedly panicked. this is a bug.

note: we would appreciate a bug report: https://github.com/rust-lang/rust/issues/new?labels=C-bug%2C+I-ICE%2C+T-compiler&template=ice.md

note: rustc 1.65.0-nightly (2befdefdd 2022-08-06) running on x86_64-unknown-linux-gnu

query stack during panic:
end of query stack
error: aborting due to previous error

For more information about this error, try `rustc --explain E0106`.

Bug Labels:
A-diagnostics, C-bug, D-Unicode-unaware, I-ICE, T-compiler
